Fixed issue with blinking horizontal scroll during page navigation

--- a/js/styles/atlas.css
+++ b/js/styles/atlas.css
@@ -299,6 +299,7 @@ pre span.key {
   border-bottom: solid 1px #ccc;
   white-space: nowrap;
   text-align: right;
+  overflow: hidden;
 }
 
 .wrapperHeader a {
